--- a/PageStyles/login/split.html
+++ b/PageStyles/login/split.html
@@ -5,16 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href = "split.css" rel = "stylesheet"/>
-  <title>Document</title>
+  <title>Login and Sign Up Page</title>
 </head>
 <body>
   <div class="container">
     <div class="split left">
-      <h1>Login</h1>
+      <h1>Login Below</h1>
       <div class="leftloginpage">
-        <div class="color"></div>
-        <div class="color"></div>   
-        <div class="color"></div>
         <div class="box">
           <div class="container1">
             <div class="form">
@@ -30,9 +27,10 @@
               <div class="input__box">
                 <input type="submit" value="Login" />
               </div>
-              <p class="forget">
-                Forgot Password? <a href="#">Click Here</a>
-              </p>
+              <a href = forgot.html> 
+                <p class="forget">
+                Forgot Password? Click Here </a>
+                </p>
             </form>
           </div>
         </div>
@@ -41,15 +39,12 @@
     </div>
     <div class="container2">
     <div class="split right">
-      <h1>Don't have an account?</h1>
+      <h1>Sign Up Today</h1>
       <div class="rightsignup">
-        <div class="color"></div>
-        <div class="color"></div>   
-        <div class="color"></div>
         <div class="box">
           <div class="container1">
             <div class="form">
-            <h2>Sign up today!</h2>
+            <h2>Don't have an account?</h2>
             <h3>Enter your information below to create an account!</h3>
             <form>
               <div class="input__box">
@@ -61,10 +56,6 @@
               <div class="input__box">
                 <input type="password" placeholder="Password" />
               </div>
-
-
-
-
               <div class="input__box">
                 <input type="submit" value="Submit" />
               </div>
