--- a/PageStyles/login/forgot.html
+++ b/PageStyles/login/forgot.html
@@ -9,33 +9,17 @@
 </head>
 <body>
 <section>
-<div class="box">
-  <div class="π" style="--i: 0"></div>
-  <div class="π" style="--i: 1"></div>
-  <div class="π" style="--i: 2"></div>
-  <div class="π" style="--i: 3"></div>
-  <div class="π" style="--i: 4"></div>
-  <div class="container1">
-      <div class="form">
-          <h2>Forgot your password?</h2>
-          <h3>Enter your email address below and we'll send you a link to reset your password.</h3>
-          <form>
-          <div class="input__box">
-              <input type="text" placeholder="Email" />
-          </div>
-          <div class="input__box">
-              <input type="submit" value="Submit" />
-          </div>
-          <p class="forget">
-              Back to Login Page? <a href="split.html">Click Here</a>
-          </p>
-          </form>
-      </div>
+    <h1>Forgot your Password?</h1>
+    <p1>Enter your email address below and we'll send you a link to reset your password.</p1>
+    <form action="/reset-password" method="POST">
+    <div class="box1"><input type="email"  placeholder="Email" name="email" id="email" required> </div>
+    <button type="submit">Reset Password</button>
+    <p class="forget">
+    Back to Login Page? <a href="split.html">Click Here</a>
+    </p>
+    </form>
   </div>
-  </div>
-</div>
 </section>
-</div>
 </div>
 </body>
 </html>
