Login Page and Forgot Password converted completely to React
converted to react and added css styles

--- a/PageStyles/login/split.html
+++ b/PageStyles/login/split.html
@@ -70,3 +70,66 @@
   <script src="login.js"></script>
 </body>
 </html>
+
+
+  <!-- return (
+ 
+    <div className="container">
+    <div className="split left">
+    <h1 className="today-below">Login Below</h1>
+      <div className="leftloginpage">
+      <div className="box">
+      <div className="container1">
+      <div className="form">
+      <h2>Login to PeKan Pi</h2>
+      <h3>Recipe generator built to help limit food waste!</h3>
+      <form>
+      <div className="input__box">
+      <input type="text" placeholder="Email" />
+      </div>
+        <div className="input__box">
+             <input type="password" placeholder="Password" />
+                </div>
+                    <div className="input__box">
+                      <input type="submit" value="Login" />
+                    </div>
+                     <Link to="/forgot">
+                      <p className="forget">Forgot Password? Click Here </p>
+                    </Link>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div className="container2">
+        <div className="split right">
+        <h1 className="today-below">Sign Up Today</h1>
+        <div className="rightsignup">
+        <div className="box">
+        <div className="container1">
+        <div className="form">
+        <h2>Don't have an account?</h2>
+        <h3>Enter your information below to create an account!</h3>
+        <form>
+        <div className="input__box">
+        <input type="text" placeholder="Full Name" />
+        </div>
+        <div className="input__box">
+        <input type="text" placeholder="Email" />
+        </div>
+        <div className="input__box">
+        <input type="password" placeholder="Password" />
+        </div>
+        <div className="input__box">
+        <input type="submit" value="Submit" />
+        </div>
+      </form>
+      </div>
+      </div>
+    </div>
+    </div>
+    </div>
+  </div>
+  </div>
+  ); -->
