Added images to website

--- a/PageStyles/profile/profilePage.html
+++ b/PageStyles/profile/profilePage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PeKan Pi</title>
-    <link rel="icon" <img src="logo.png"> 
+    <link rel="icon" <img src="./images/logo.png"> 
     <link rel="stylesheet" href="home.css" />
     <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="navbar">
         <div class="logo">
-            <a href="profilePage.html"> <img src= "logo2.png" width="150px"></a>
+            <a href="profilePage.html"> <img src= "./images/logo2.png" width="150px"></a>
         </div>
         <nav>
           <ul id="MenuItems">
@@ -27,9 +27,9 @@
             <li><a href="">About</a></li>
           </ul>
         </nav>
-        <a href="search.html"> <img src="../Images/recipes.png" width="50px" height="50px"> </a>
-        <a href="whisk.html"> <img src="whisk2.png" width="50px" height="50px"> </a>
-        <img src="menu.png" class="menu-icon" onclick="menutoggle()">
+        <a href="search.html"> <img src="./images/recipes.png" width="50px" height="50px"> </a>
+        <a href="whisk.html"> <img src="./images/whisk2.png" width="50px" height="50px"> </a>
+        <img src="./images/menu.png" class="menu-icon" onclick="menutoggle()">
       </div>
       <div class="row">
         <div class="col-2">
@@ -44,7 +44,7 @@
           <a href="search.html"class="btn">Explore Now</a></a>
         </div>
         <div class="col-2">
-          <img src="table 2.jpeg" />
+          <img src="./images/table 2.jpeg" />
         </div>
       </div>
     <!------ featured categories ------>
@@ -53,51 +53,51 @@
             <h1 class="title">Cuisines</h1>
             <div class="row img-size">
               <div class="col-3">
-                <a href="search.html"> <img src= "africa.jpeg" width="150px"></a>
+                <a href="search.html"> <img src= "./images/africa.jpeg" width="150px"></a>
                   <h4 class="culture">African</h4>
               </div>
               <div class="col-3">
-                <a href="search.html"> <img src= "american.jpeg" width="150px" ></a>
+                <a href="search.html"> <img src= "./images/american.jpeg" width="150px" ></a>
                   <h4 class="culture">American</h4>
               </div>
               <div class="col-3">
-                <a href="search.html"> <img src= "chinese.jpeg" width="150px"></a>
+                <a href="search.html"> <img src= "./images/chinese.jpeg" width="150px"></a>
                   <h4 class="culture">Chinese</h4>
               </div>
               <div class="col-3">
-                <a href="search.html"> <img src= "french.jpeg" width="150px"></a>
+                <a href="search.html"> <img src= "./images/french.jpeg" width="150px"></a>
                   <h4 class="culture">French</h4>
               </div>
               <div class="col-3">
-                <a href="search.html"> <img src= "greek.jpeg" width="150px"></a>
+                <a href="search.html"> <img src= "./images/greek.jpeg" width="150px"></a>
                   <h4 class="culture">Mediterranean</h4>
               </div>
               <div class="col-3">
-                <a href="search.html"> <img src= "indian.jpeg" width="150px"></a>
+                <a href="search.html"> <img src= "./images/indian.jpeg" width="150px"></a>
                   <h4 class="culture">Indian</h4>
               </div>
               <div class="col-3">
-                <a href="search.html"> <img src= "italian2.jpeg" width="150px"></a>
+                <a href="search.html"> <img src= "./images/italian2.jpeg" width="150px"></a>
                   <h4 class="culture">Italian</h4>
               </div>
               <div class="col-3">
-                <a href="search.html"> <img src= "japanese.jpeg" width="150px"></a>
+                <a href="search.html"> <img src= "./images/japanese.jpeg" width="150px"></a>
                   <h4 class="culture">Japanese</h4>
               </div>
               <div class="col-3">
-                <a href="search.html"> <img src= "korean.png" width="150px"></a>
+                <a href="search.html"> <img src= "./images/korean.png" width="150px"></a>
                   <h4 class="culture">Korean</h4>
               </div>
               <div class="col-3">
-                <a href="search.html"> <img src= "brazil.jpeg" width="150px"></a>
+                <a href="search.html"> <img src= "./images/brazil.jpeg" width="150px"></a>
                   <h4 class="culture">Brazilian</h4>
               </div>
               <div class="col-3">
-                <a href="search.html"> <img src= "mexican.jpeg" width="150px"></a>
+                <a href="search.html"> <img src= "./images/mexican.jpeg" width="150px"></a>
                   <h4 class="culture">Spanish</h4>
               </div>
                 <div class="col-3">
-                  <a href="search.html"> <img src= "vietname.jpeg" width="150px"></a>
+                  <a href="search.html"> <img src= "./images/vietname.jpeg" width="150px"></a>
                     <h4 class="culture">Vietnamese</h4>
                 </div>
             </div>
@@ -116,7 +116,7 @@
             <div class="small-container">
                 <div class="row">
                     <div class="col-2">
-                        <img src="table5.jpeg" class="popular-img">
+                        <img src="./images/table5.jpeg" class="popular-img">
                     </div>
                 <div class="col-2">
                     <!-- <p>Click here to view PeKan Pi's most popular recipe this month </p> -->
